#5796 Tool to collapse/expand all pages/panels/questions Fixes #5796

--- a/packages/survey-creator-core/src/components/page-navigator/page-navigator.scss
+++ b/packages/survey-creator-core/src/components/page-navigator/page-navigator.scss
@@ -70,7 +70,7 @@ survey-creator,
   position: absolute;
   padding: calcSize(16.5) 0;
   top: 0;
-  bottom: 0;
+  bottom: calcSize(20);
   right: calcSize(1);
 }
 
