--- a/packages/survey-creator-core/src/components/tabs/designer.scss
+++ b/packages/survey-creator-core/src/components/tabs/designer.scss
@@ -115,3 +115,13 @@ svc-tab-designer {
 .svc-designer-placeholder-page .svc-row--ghost {
   display: none;
 }
+
+.svc-tab-designer__toolbar {
+  position: absolute;
+  bottom: calcSize(0);
+  right: calcSize(1);
+  background-color: red;
+  .sv-action-bar {
+    flex-direction: column;
+  }
+}
